src/sass/includes/_main.scss
/* ... */
.CslideInRight {
  -webkit-animation-name: slideInRight;
  animation-name: slideInRight;
  z-index: 1003;
}

/* == */

.icon-circle, .icon-circle-active {
  color: #1ABC9C;
}

.tx-comment {
  border-top: 1px solid #eee;
  padding-top: 10px;
  margin-top: 10px;
}

/* notifications */

.dr-notification-container {
  position: absolute;
  z-index: 10000;
  width: 100%;
  &.bottom {
    bottom: 20px;
  }
  &.right {
    right: 0;
  }
  &.left {
    left: 20px;
  }
  &.top {
    top: 45px;
  }
  &.center {
    left: 50%;
    margin-left: -190px;
  }
}

.dr-notification-wrapper {
  position: relative;
  width: 100%;
  margin: 0;
  &.offline {
    position: absolute;
    top: 0px;
    z-index: 2000;
    opacity: 1.0 !important;
    background-color: $brand-primary;
  }
  &.client-error {
    position: absolute;
    top: 45px;
    z-index: 11;
  }
}

.dr-notification-close-btn {
  color: #A5B2BF;
  border: 1px solid #A5B2BF;
  border-radius: 100%;
  display: inline-block;
  padding: 0px 8px;
  position: absolute;
  right: 5px;
  cursor: pointer;
  z-index: 10;
  margin: 14px 8px 0;
  font-size: 20px;
}

.dr-notification-image {
  float: left;
  color: #fff;
  text-align: center;
  background-color: #213140;
  width: 40px;
  height: 40px;
  font-size: 1.5rem;
  border-radius: 100%;
  margin: 0.6rem;
  img {
    margin: 15px;
    max-width: 70px;
    min-width: 48px;
  }
}

.dr-notification-content {
  line-height: 90%;
  padding: 10px 50px 5px 60px;
}

.dr-notification-title {
  color: #fff;
  font-size: 12px;
  margin-bottom: 0;
  font-weight: 700;
}

.dr-notification {
  background: rgba(44, 62, 80, 0.9);
  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
  width: 100%;
  clear: both;
  overflow: hidden;
  border-radius: 0;
  height: 60px;
}

.dr-notification-text {
  font-size: 11px;
  color: #fff;
}

/*** modals ***/

.hideModal {
  visibility: none !important;
  display: none !important;
}

.reveal-modal-bg {
  display: none !important;
}

.reveal-modal.full {
  top: 0 !important;
}

.modal-content {
  position: relative;
  height: 100%;
  width: 100%;
  -webkit-transform: translate3d(0, 0, 0);
  background: #f6f7f9;
}

body.modal-open {
  position: fixed;
  overflow: hidden;
  z-index: 1;
}

.reveal-modal {
  padding: 0;
  border: none;
  border-radius: 0;
  outline: 0;
  box-shadow: none;
  &.animated {
    &.slideInRight, &.slideOutRight {
      -webkit-animation-duration: 0.3s;
      animation-duration: 0.3s;
    }
  }
}

.reveal-modal.animated {
  &.fadeOutUp, &.slideInUp, &.slideInDown {
    -webkit-animation-duration: 0.3s;
    animation-duration: 0.3s;
  }
}

.popup-tx-status {
  z-index: 1030;
}

.popup-txsent {
  position: absolute;
  width: 100%;
  height: 100%;
  background: rgba(24, 44, 58, 0.9);
  i {
    font-size: 5rem;
    color: #4A90E2;
    border-radius: 100%;
    border-color: #4A90E2;
    border: 2px solid;
    width: 150px;
    height: 150px;
    display: block;
    text-align: center;
    padding-top: 1rem;
  }
}

.popup-txsigned i, .popup-txrejected i {
  font-size: 5rem;
  color: #4A90E2;
  border-radius: 100%;
  border-color: #4A90E2;
  border: 2px solid;
  width: 150px;
  height: 150px;
  display: block;
  text-align: center;
  padding-top: 1rem;
}

.payment-proposal-head {
  color: #fff;
  padding: 10px 10px 20px 10px;
  text-align: center;
}

.payment-proposal-to {
  width: 100%;
  display: inline-block;
  padding: 5px 15px;
  background-color: rgba(0, 0, 0, 0.1);
  i {
    position: inherit;
    left: 25px;
    padding-right: 10px;
    border-right: 1px solid;
    border-color: rgba(255, 255, 255, 0.1);
    font-size: 20px;
  }
}

.tab-view {
  -webkit-transform: translate3d(-100%, 0, 0);
  transform: translate3d(-100%, 0, 0);
  width: 100%;
  position: absolute;
  top: 44px;
  bottom: 37px;
  overflow: auto;
}

.tab-in {
  -webkit-transform: translate3d(0, 0, 0) !important;
  transform: translate3d(0, 0, 0) !important;
}

.tab-out {
  -webkit-transform: translate3d(-100%, 0, 0) !important;
  transform: translate3d(-100%, 0, 0) !important;
}

.create-tab {
  background-color: #fff;
  width: 100%;
  border-bottom: 1px solid #DEDFE1;
  margin-bottom: 25px;
  overflow: hidden;
  .tab-container {
    float: left;
    text-align: center;
  }
}

.test {
  background: red;
}

.create-tab a {
  font-size: .7rem;
  padding: 1.2rem .2rem .6rem .2rem;
  color: #7A8C9E;
  text-transform: uppercase;
  font-weight: 500;
  display: block;
}

.tab-container.selected {
  border-bottom: 3px solid $brand-primary;
  a {
    color: $brand-primary;
  }
}

select option:empty { display:none }

[class*=" fi-"] {
  line-height: 1 }
  
.preferences-sign, .preferencesVerify {
  margin-top: 30px
}

